fix overflow

--- a/app/views/css/login-style.css
+++ b/app/views/css/login-style.css
@@ -1,5 +1,8 @@
+body {
+    overflow: hidden;
+}
+
 .gradient-form {
     background-color: #eeeeee;
     height: 100vh;
-    overflow: hidden;
 }
